--- a/styles.css
+++ b/styles.css
@@ -36,12 +36,24 @@ h1 {
   letter-spacing: 3.45714px;
   text-transform: uppercase;
 }
+@media (min-width: 33.75rem) {
+  h1 {
+    font-size: 0.8125rem;
+    letter-spacing: 4.08571px;
+  }
+}
 
 p {
   font-size: 1.5rem;
   font-weight: 800;
   color: hsl(193, 38%, 86%);
   letter-spacing: -0.26px;
+}
+@media (min-width: 33.75rem) {
+  p {
+    font-size: 1.75rem;
+    letter-spacing: -0.3px;
+  }
 }
 
 img {
@@ -62,9 +74,18 @@ button {
   border-radius: 50%;
   background-color: hsl(150, 100%, 66%);
   border: none;
+  cursor: pointer;
   margin-top: -2rem;
   padding: 20px;
   width: 4rem;
+}
+button:hover {
+  box-shadow: 0px 0px 40px #53FFAA;
+  transition: 0.25s ease-in;
+}
+button:focus {
+  outline: auto 2px Highlight;
+  outline: auto 5px -webkit-focus-ring-color;
 }
 
 .container {
@@ -86,12 +107,27 @@ figure {
   border-radius: 10px;
   background-color: hsl(217, 19%, 24%);
   box-shadow: 30px 50px 80px rgba(0, 0, 0, 0.100202);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 33.75rem;
   padding-inline: 1.5rem;
+}
+@media (min-width: 33.75rem) {
+  figure {
+    border-radius: 15px;
+    padding-inline: 3rem;
+  }
 }
 
 .advice__title {
   margin-bottom: 1.5rem;
   padding-top: 2.5rem;
+}
+@media (min-width: 33.75rem) {
+  .advice__title {
+    padding-top: 3rem;
+  }
 }
 
 .advice__quote p {
@@ -103,9 +139,19 @@ figure {
 .advice__quote p::after {
   content: close-quote;
 }
+@media (min-width: 33.75rem) {
+  .advice__quote p {
+    margin-bottom: 2.5rem;
+  }
+}
 
 .horizontal-rule {
   padding-bottom: 4rem;
+}
+@media (min-width: 33.75rem) {
+  .horizontal-rule {
+    padding-bottom: 4.5rem;
+  }
 }
 
 .attribution {
